# EDM

./: .gitignore  .gitmodules  README.md
hwsimu/: CMakeLists.txt  README.md  golden.result
hwsimu/db/: load_D.csv_insert  load_E.csv_scan  load_F.csv  run_A.csv  run_B.csv  run_C.csv  run_D.csv_insert  run_E.csv-scan  run_F.csv
hwsimu/include/: edm.h  flash.h  numa.h  rdma.h
hwsimu/scripts/: gen_trace.sh  run_all.sh
hwsimu/scripts/py/: cal_avgminmax.py  gen_runnable.py  plot_goodp.py  plot_latency.py  stat_proc.py
hwsimu/src/: EDM.cpp  FLASH.cpp  NUMA.cpp  RDMA.cpp  utilization.cpp
hwsimu/ycsb_raw_output/: log_workloada.txt  log_workloadb.txt  log_workloadc.txt  log_workloadd.txt  log_workloade.txt  log_workloadf.txt
hwsimu/ycsb_raw_output/raw_csv/: A.csv  B.csv  C.csv  D.csv_insert  E.csv_scan  F.csv
netsimu/: get_result.sh
netsimu/results/: golden.result
netsimu/src/: cxl.c  pfabric.c  system_stats.c
simulation/: Makefile  genplot.py  parse_log.py  run_test.sh
simulation/include/: driver.h  params.h
simulation/lib/: buffer.c
simulation/results/: golden.result
simulation/src/: dctcp.c  edm.c  fastpass.c  ird.c  pfc.c
